found_bugs/kotlin/1/compiler_output
found_bugs/1/program.kt:20:7: error: type mismatch: inferred type is Int but Short was expected
      -20
      ^
found_bugs/1/program.kt:22:7: error: type mismatch: inferred type is Int but Short was expected
      -1
      ^
